--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 <body>
   <div class="background"></div>
   <header>
-    <img src="assets/logo.jpg" alt="TT US Logo" class="logo" />
-    <h1>TT US LLC</h1>
-    <a href="https://turne.us/" target="_blank" class="button large">Go to Booking Portal</a>
+    <div style="display:flex;align-items:center;gap:12px">
+      <img src="assets/logo.jpg" alt="TT US Logo" class="logo" />
+      <h1>TT US LLC</h1>
+    </div>
+    <div style="display:flex;align-items:center;gap:10px">
+      <a href="index-es.html" class="button secondary">🇪🇸 Español</a>
+      <a href="https://turne.us/" target="_blank" class="button large">Go to Booking Portal</a>
+    </div>
   </header>
 
   <main>
