--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="background"></div>
   <header>
     <div style="display:flex;align-items:center;gap:12px">
-      <img src="assets/logo.jpg" alt="TT US Logo" class="logo" />
+      <img src="assets/logo.jpg" alt="TT US Logo" class="logo" onerror="this.onerror=null;this.src='assets/logo.svg';" />
       <h1>TT US LLC</h1>
     </div>
     <div style="display:flex;align-items:center;gap:10px">
