--- a/index-es.html
+++ b/index-es.html
@@ -10,10 +10,7 @@
 <body>
   <div class="background"></div>
   <header>
-    <div style="display:flex;align-items:center;gap:12px">
-      <img src="assets/logo.jpg" alt="TT US Logo" class="logo" onerror="this.onerror=null;this.src='assets/logo.svg';" />
-      <h1>TT US LLC</h1>
-    </div>
+    <div style="display:flex;align-items:center;gap:12px">\n      <img src="assets/logo.jpg" alt="TT US Logo" class="logo" onerror="this.onerror=null;this.src=\'assets/logo.svg\';" />\n      <h1>TT US LLC</h1>\n    </div>
     <div style="display:flex;align-items:center;gap:10px">
       <a href="index.html" class="button secondary">🇬🇧 English</a>
       <a href="https://turne.us/" target="_blank" class="button large">Ir al portal</a>
