--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,11 +10,9 @@
 <body>
   <div class="background"></div>
   <header>
-    <div style="display:flex;align-items:center;gap:12px"><img src="assets/logo.jpg" alt="TT US Logo" class="logo" onerror="this.onerror=null;this.src='assets/logo.svg';" /><h1 style="margin:0">TT US LLC</h1></div>
-    <div style="display:flex;align-items:center;gap:10px">
-      <a href="index-es.html" class="button secondary">🇪🇸 Español</a>
-      <a href="https://turne.us/" target="_blank" class="button large">Go to Booking Portal</a>
-    </div>
+    <img src="assets/logo.jpg" alt="TT US Logo" class="logo" />
+    <h1>TT US LLC</h1>
+    <a href="https://turne.us/" target="_blank" class="button large">Go to Booking Portal</a>
   </header>
 
   <main>
